<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="40dp"
    tools:context=".activities.SignInActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/authorization_form"
        android:textAllCaps="true"
        android:textColor="@color/purple_700"
        android:textSize="24sp" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/enter_login_and_password"
        android:textColor="@color/purple_500"
        android:textSize="16sp" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="15dp" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="5dp" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="15dp" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signIn"
        android:textAllCaps="true" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="5dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/or"
        android:textColor="@color/purple_500"
        android:textSize="16sp" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="5dp" />

    <Button
        android:id="@+id/goToRegisterActivityButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:gravity="center"
        android:text="@string/create_account"
        android:textColor="@color/purple_500" />
</LinearLayout>